@@ -1,13 +1,3 @@
-#ifdef _MSC_VER
-//'identifier' : not all control paths return a value
-//#pragma warning ( disable : 4715 )
-// 'identifier' : class 'type' needs to have dll-interface to be used by
-// clients of class 'type2'
-#pragma warning ( disable : 4251 )
-// 'identifier' : identifier was truncated to 'number' characters in the
-// debug information
-#pragma warning ( disable : 4786 )
-#endif //_MSC_VER
 
 #include "gdcmException.h"
 
