@@ -1,17 +1,5 @@
 // gdcmFile.cxx
 
-//This is needed when compiling in debug mode
-#ifdef _MSC_VER
-// 'type' : forcing value to bool 'true' or 'false' (performance warning)
-//#pragma warning ( disable : 4800 )
-// 'identifier' : class 'type' needs to have dll-interface to be used by
-// clients of class 'type2'
-#pragma warning ( disable : 4251 )
-// 'identifier' : identifier was truncated to 'number' characters in the
-// debug information
-#pragma warning ( disable : 4786 )
-#endif //_MSC_VER
-
 #include "gdcmFile.h"
 #include "gdcmUtil.h"
 #include "iddcmjpeg.h" // for the 'LibIDO' Jpeg LossLess
